Adjusting GAE version to 1.8.0

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <!-- Specify hard-coded project properties here -->
     <properties>
         <mardao.version>2.3.3-SNAPSHOT</mardao.version>
-        <gae.version>1.7.7</gae.version>
+        <gae.version>1.8.0</gae.version>
         <gae.application.version>lab</gae.application.version>
         <gae.application.id>pocket-roster</gae.application.id>
         <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
@@ -195,8 +195,8 @@
                     <dependency>
                         <groupId>net.kindleit</groupId>
                         <artifactId>gae-runtime</artifactId>
-                        <version>1.7.5.1</version>
-                        <!--<version>${gae.version}</version>-->
+                        <!--<version>1.7.5.1</version>-->
+                        <version>${gae.version}</version>
                         <type>pom</type>
                     </dependency>
                     <dependency>
